# sd2iec_esp32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.esp32s3
components/sd2iec/: CMakeLists.txt  Kconfig
components/sd2iec/lcd-i2c/: main.c
components/sd2iec/src/: buffers.c  buffers.h  cbmdirent.h  d64ops.c  d64ops.h  diskchange.c  diskchange.h  diskio.h  display.c  doscmd.c  doscmd.h  eefs-ops.c  eeprom-conf.c  errormsg.c  fastloader.c  fatops.c  fatops.h  fileops.c  fileops.h  filesystem.h  fl-dreamload.c  fl-samsjourney.c  fl-ulm3.c  iec.c  ieee.c  m2iops.c  main.c  p00cache.c  parser.c  parser.h  timer.c  utils.c  utils.h  vfsops.c  vfsops.h  wrapops.h
components/sd2iec/src/esp32/: arch-config.h  arch-timer.h  atomic.h  autoconf.h  crc.c  crc.h  debug.c  debug.h  espfs.c  espfs.h  iec-bus.c  iec-bus.h  llfl-common.c  llfl-common.h  nvs-conf.c  progmem.h  spi.h  system.c  uart.c
main/: CMakeLists.txt  sd2iec_esp32.c
