idf_component_register(SRCS 
        "src/main.c"
        "src/buffers.c"
        "src/iec.c"
        "src/errormsg.c"
        "src/fileops.c"
        "src/doscmd.c"
        "src/utils.c"
        "src/parser.c"
        "src/fastloader.c"
        "src/timer.c"
        "src/d64ops.c"
        "src/fl-ar6.c"
        "src/fl-dolphin.c"
        "src/fl-dreamload.c"
        "src/fl-eload.c"
        "src/fl-epyxcart.c"
        "src/fl-fc3exos.c"
        "src/fl-geos.c"
        "src/fl-gijoe.c"
        "src/fl-mmzak.c"
        "src/fl-n0sdos.c"
        "src/fl-nippon.c"
        "src/fl-samsjourney.c"
        "src/fl-turbodisk.c"
        "src/fl-ulm3.c"
        "src/led.c"
        "src/vfsops.c"
        "src/esp32/system.c"
        "src/esp32/iec-bus.c"
        "src/esp32/nvs-conf.c"
        "src/esp32/crc.c"
        "src/esp32/uart.c"
        "src/esp32/espfs.c"
        "src/esp32/debug.c"
        "src/esp32/llfl-common.c"
        "src/esp32/llfl-ar6.c"
        "src/esp32/llfl-dreamload.c"
        "src/esp32/llfl-epyxcart.c"
        "src/esp32/llfl-fc3exos.c"
        "src/esp32/llfl-geos.c"
        "src/esp32/llfl-jiffydos.c"
        "src/esp32/llfl-n0sdos.c"
        "src/esp32/llfl-turbodisk.c"
        "src/esp32/llfl-ulm3.c"
                INCLUDE_DIRS "src/esp32;src"
                REQUIRES fatfs nvs_flash esp_timer esp_event )
